--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                         'fix-accent': '#f59e0b', // Naranja/Amarillo para acento
                         'fix-report': '#059669', // Color para el reporte de Administrador
                         'fix-error': '#dc2626', // Color para errores
+                        'fix-google': '#4285F4', // Color de Google para el botón de envío
                     },
                     fontFamily: {
                         sans: ['Inter', 'sans-serif'],
