--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             if (dbFailed) {
                 // Si la DB falló, no cargamos nada en la lista
                 // CORRECCIÓN: NO MOSTRAR EL ERROR DE CONEXIÓN A LOS DIRECTIVOS
-                document.getElementById('visitsList').innerHTML = `<p class="text-gray-500 p-4 italic">No hay visitas registradas. Use el formulario para ingresar la agenda.</p>`;
+                document.getElementById('visitsList').innerHTML = `<p class="text-gray-500 p-4 italic">No hay visitas registradas en esta sesión. Use el formulario para ingresar la agenda.</p>`;
                 return;
             }
             
